--- a/index.css
+++ b/index.css
@@ -1,9 +1,28 @@
 *{margin: 0 auto;padding: 0 auto;}
 .xiaz{background: url(img/xiazai.jpg) no-repeat center top;height: 1080px;overflow: hidden; font-size: 24px; color: #fff;text-align: center;position: relative;
 }
-.xiaz p{width:154px;/*position: absolute; top: 215px; left: 50%; margin-left: -370px;*/margin:225px auto 0;}
+.xiaz p{width:154px;/*position: absolute; top: 215px; left: 50%; margin-left: -370px;*/margin:285px auto 0;}
 .xiaz p img{ display: block;width: 150px;height:150px;  border:2px solid #8ad9fa; border-radius: 10px;background: #fff;}
 .xiaz  a{ color: #56aeda;text-decoration: none;}
-.xiaz span{ display: block;width: 50px;height: 50px;/* position: absolute; top: 290px;left: 50%; margin-left: -320px;*/margin:-15px auto 0; position: relative;
-  padding-left: 80px; z-index: 3;}
+.xiaz span{ display: block;width: 80px;height: 80px;/* position: absolute; top: 290px;left: 50%; margin-left: -320px;*/margin:-15px auto 0; position: relative;
+  padding-left: 80px; z-index: 3;background: url(img/shouzhi.png) no-repeat right top;background-size: 50px 50px;
+ -webkit-animation-name: scaleDraw; /*关键帧名称*/
+            -webkit-animation-timing-function: ease-in-out; /*动画的速度曲线*/
+            -webkit-animation-iteration-count: infinite;  /*动画播放的次数*/
+            -webkit-animation-duration: 5s; /*动画所花费的时间*/
+}
 .xiaz span img{width: 50px;height: 50px;}
+@keyframes scaleDraw {  /*定义关键帧、scaleDrew是需要绑定到选择器的关键帧名称*/
+            0%{
+                transform: scale(1);  /*开始为原始大小*/
+            }
+            25%{
+                transform: scale(1.1); /*放大1.1倍*/
+            }
+            50%{
+                transform: scale(1);
+            }
+            75%{
+                transform: scale(1.1);
+            }
+        }
